[metadata]
long_description = file: README.md
license = MIT
license_file = LICENSE

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=True
line_length=88
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=True
known_first_party =
    mkproj
skip_glob =
    **/vendor/**
    **/patched/**
